# LLM-Knowledge-Assistant-for-Internal-Systems

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes_admin.py  routes_chat.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  document.py  structured_data.py
app/services/: chat.py  embeddings.py  ingestion.py  retrieval.py
app/workers/: scheduler.py
llm_knowledge_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: init_db.py  run_etl_example.py
tests/: test_chat_endpoint.py  test_ingestion.py  test_models.py  test_retrieval.py
