[project]
name = "llm-knowledge-assistant"
version = "0.1.0"
description = "Internal LLM Knowledge Assistant backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "openai>=1.14.0",
    "langchain-core>=0.1.30",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-select = ["B","C4","I","N","UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
